# DatabaseAPI

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: DownloadDependecies.cmake
example/: UpdateValues.cpp  example.cpp
example/DB/: Versions.db
include/Database/: DatabaseAPI.hpp
src/: DatabaseAPI.cpp
src/test/: DatabaseTest.cpp  DatabaseTest.hpp
src/test/DB/: AppInstaller.db
